Fixed an issue where the box-sizing of the vertical nav menu was causing it to overflow

--- a/src/Sections/Scan_Receipts/ScanReceipts30.module.css
+++ b/src/Sections/Scan_Receipts/ScanReceipts30.module.css
@@ -1,4 +1,5 @@
 .scan_receipts_30{
     height: inherit;
-    width: inherit;
+    width: 100%;
+    box-sizing: border-box;
 }
