--- a/src/components/UI/VerticalNavButton.module.css
+++ b/src/components/UI/VerticalNavButton.module.css
@@ -19,6 +19,7 @@
 
 .icon2{
     flex: 0 0 1rem;
+    margin: 1rem;
 }
 
 
