--- a/src/components/UI/VerticalNavMenu.module.css
+++ b/src/components/UI/VerticalNavMenu.module.css
@@ -1,6 +1,9 @@
-.main{
+.verticalnavmenu{
     display:flex;
     flex-direction: column;
     background-color: #fff;
     height: inherit;
+    width: inherit;
+    padding: 1rem;
+    box-sizing: border-box;
 }
